package com.viking.pathfinder.listener;


public interface OnNoteClickListener<T> {
    void onNoteClick(T item);
}
